Handle delta widget correct values after submit and display ne value, fix stock validation constraints, TextPreviewType now extends TextType so that its errors can be shown inline

--- a/src/PrestaShopBundle/Resources/views/Admin/TwigTemplateForm/prestashop_ui_kit_base.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/TwigTemplateForm/prestashop_ui_kit_base.html.twig
@@ -1329,9 +1329,11 @@
 
 {% block delta_quantity_widget %}
   {% set quantity = value.quantity|default(form.quantity.vars.value) %}
-  {% set attr = attr|merge({class: (attr.class|default('') ~ ' delta-quantity')|trim, 'data-initial-quantity': quantity}) %}
+  {% set deltaQuantity = value.delta|default(form.delta.vars.value) %}
+  {% set initialQuantity = quantity - deltaQuantity %}
+  {% set attr = attr|merge({class: (attr.class|default('') ~ ' delta-quantity')|trim, 'data-initial-quantity': initialQuantity}) %}
   <div {{ block('widget_container_attributes') }}>
-    {{ form_widget(form.quantity, {value: quantity}) }}
+    {{ form_widget(form.quantity, {initialQuantity: initialQuantity, deltaQuantity: deltaQuantity}) }}
     {{ form_row(form.delta) }}
   </div>
 {% endblock %}
@@ -1340,11 +1342,12 @@
   {%- set attr = attr|merge({class: (attr.class|default('') ~ ' delta-quantity-quantity')|trim}) -%}
   <div {{ block('widget_container_attributes') }}>
     {{- block('form_widget_simple') -}}
-    <span class="initial-quantity">{{ value }}</span>
-    <span class="quantity-update">
+    <span class="initial-quantity">{{ initialQuantity }}</span>
+    <span class="quantity-update{% if deltaQuantity != 0 %} quantity-modified{% endif %}">
       <i class="material-icons">trending_flat</i>
-      <span class="new-quantity">{{ value }}</span>
+      <span class="new-quantity">{{ initialQuantity + deltaQuantity }}</span>
     </span>
+    {{ form_errors(form) }}
   </div>
 {% endblock %}
 
