Fix DeltaQuantity input when used in a collection, the value is then a placeholder that needs to be kept for JS generation to work correctly

--- a/src/PrestaShopBundle/Resources/views/Admin/TwigTemplateForm/prestashop_ui_kit_base.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/TwigTemplateForm/prestashop_ui_kit_base.html.twig
@@ -1329,11 +1329,13 @@
 
 {% block delta_quantity_widget %}
   {% set quantity = value.quantity|default(form.quantity.vars.value) %}
-  {% set deltaQuantity = value.delta|default(form.delta.vars.value) %}
-  {% set initialQuantity = quantity - deltaQuantity %}
+  {# If initial quantity has not been computed we use value which may be containing a placeholder useful for collection rendering #}
+  {% if initialQuantity is null %}
+    {% set initialQuantity = quantity %}
+  {% endif %}
   {% set attr = attr|merge({class: (attr.class|default('') ~ ' delta-quantity')|trim, 'data-initial-quantity': initialQuantity}) %}
   <div {{ block('widget_container_attributes') }}>
-    {{ form_widget(form.quantity, {initialQuantity: initialQuantity, deltaQuantity: deltaQuantity}) }}
+    {{ form_widget(form.quantity, {initialQuantity: initialQuantity, deltaQuantity: deltaQuantity, value: quantity}) }}
     {{ form_row(form.delta) }}
   </div>
 {% endblock %}
@@ -1345,7 +1347,7 @@
     <span class="initial-quantity">{{ initialQuantity }}</span>
     <span class="quantity-update{% if deltaQuantity != 0 %} quantity-modified{% endif %}">
       <i class="material-icons">trending_flat</i>
-      <span class="new-quantity">{{ initialQuantity + deltaQuantity }}</span>
+      <span class="new-quantity">{{ value }}</span>
     </span>
     {{ form_errors(form) }}
   </div>
