--- a/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Product/FormTheme/categories.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Product/FormTheme/categories.html.twig
@@ -38,8 +38,8 @@
   <span {{ block('widget_attributes') }}>
     {{ form_widget(form.display_name) }}
     {{ form_widget(form.name) }}
-    {% set hideCross = (form.vars.data.id is defined) and (form.vars.data.id == form.parent.parent.vars.data.default_category_id) %}
-    <a class="pstaggerClosingCross {% if hideCross %}d-none{% endif %}" href="#">x</a>
+    {% set isRemovable = (form.vars.data.removable is defined and form.vars.data.removable) %}
+    <a class="pstaggerClosingCross {% if not isRemovable %}d-none{% endif %}" href="#">x</a>
     {{ form_widget(form.id, {'attr': {'class': 'category-id-input'}}) }}
   </span>
 {% endblock %}
