--- a/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Product/Combination/not_found.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Product/Combination/not_found.html.twig
@@ -29,13 +29,13 @@
 
 {% block body %}
   <div class="card-block">
-    <div class="row justify-content-center">
+    <div class="justify-content-center">
       <img src="{{ asset('themes/new-theme/img/empty_state/missing_combination.png') }}">
     </div>
-    <div class="row justify-content-center combination-not-found-description">
+    <div class="justify-content-center combination-not-found-description">
       <h2>{{ 'This combination doesn\'t exist anymore'|trans({}, 'Admin.Catalog.Notification') }}</h2>
     </div>
-    <div class="row justify-content-center">
+    <div class="justify-content-center">
       <button type="button" aria-label="Close" class="btn btn-primary" data-dismiss="modal">
         <span>{{ 'Close and refresh'|trans({}, 'Admin.Actions') }}</span>
       </button>
