--- a/src/PrestaShopBundle/Resources/views/Admin/TwigTemplateForm/prestashop_ui_kit_base.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/TwigTemplateForm/prestashop_ui_kit_base.html.twig
@@ -1167,7 +1167,11 @@
 
 {% block form_help %}
   {% if help is not null %}
-    <small class="form-text {% if help_attr.class is defined %}{{ help_attr.class }}{% endif %}" {% if help_attr.placeholder is defined %} data-place-holder="{{ help_attr.placeholder }}" {% endif%}>{{ help|raw }}</small>
+    <small class="form-text {% if help_attr.class is defined %}{{ help_attr.class }}{% endif %}"
+        {% if help_attr.data is defined %}
+          {% for data, value in help_attr.data %} data-{{ data }}="{{ value }}" {% endfor%}
+        {% endif%}>
+      {{ help|raw }}</small>
   {% endif %}
   {% if warning is defined %}
     {{ warning }}
