Added proper hiding/showing of the list
# Conflicts:
#	admin-dev/themes/new-theme/js/pages/product/edit/specific-prices-manager.ts

--- a/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Product/CatalogPriceRule/FormTheme/catalog_price_rules.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Product/CatalogPriceRule/FormTheme/catalog_price_rules.html.twig
@@ -26,7 +26,7 @@
 {% extends '@PrestaShop/Admin/TwigTemplateForm/prestashop_ui_kit.html.twig' %}
 
 {% block catalog_price_rules_widget %}
-  <div id="catalog-price-rules-container">
+  <div id="catalog-price-rules-container" class="hide">
     {{ block('catalog_price_rules_list') }}
     {{ form_widget(form) }}
   </div>
