--- a/src/PrestaShopBundle/Resources/views/Admin/Improve/Design/Cms/Blocks/form.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Improve/Design/Cms/Blocks/form.html.twig
@@ -42,8 +42,13 @@
     </a>
 
     <div class="d-none d-lg-flex ml-auto ">
-      <button type="submit" class="btn btn-primary" name="save-and-preview" id="save-and-preview-button">
-        {{ 'Save and preview'|trans({}, 'Admin.Actions') }}
+      {% if previewUrl is defined %}
+        <a class="btn btn-secondary" href="{{ previewUrl }}" role="button" target="_blank">{{ 'View'|trans({}, 'Admin.Actions') }}</a>
+      {% else %}
+        <a class="btn btn-secondary disabled" href="#" role="button" aria-disabled="true">{{ 'View'|trans({}, 'Admin.Actions') }}</a>
+      {% endif %}
+      <button type="submit" class="btn btn-primary ml-3" name="save-and-preview" id="save-and-preview-button">
+        {{ 'Save and view'|trans({}, 'Admin.Actions') }}
       </button>
       <button type="submit" class="btn btn-primary ml-3" id="save-button">{{ 'Save'|trans({}, 'Admin.Actions') }}</button>
     </div>
@@ -55,7 +60,12 @@
           <span class="sr-only">{{ 'Toggle dropdown'|trans({}, 'Admin.Modules.Feature') }}</span>
         </button>
         <div class="dropdown-menu dropdown-menu-right">
-          <button type="submit" class="dropdown-item" name="save-and-preview" id="save-and-preview-button-mobile">{{ 'Save and preview'|trans({}, 'Admin.Actions') }}</button>
+          {% if previewUrl is defined %}
+            <a class="dropdown-item" href="{{ previewUrl }}" target="_blank">{{ 'View'|trans({}, 'Admin.Actions') }}</a>
+          {% else %}
+            <a class="dropdown-item disabled" href="#" aria-disabled="true">{{ 'View'|trans({}, 'Admin.Actions') }}</a>
+          {% endif %}
+          <button type="submit" class="dropdown-item" name="save-and-preview" id="save-and-preview-button-mobile">{{ 'Save and view'|trans({}, 'Admin.Actions') }}</button>
         </div>
       </div>
     </div>
