Add a button to delete logo image on Manufacturer form

--- a/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Manufacturer/Blocks/form.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Manufacturer/Blocks/form.html.twig
@@ -42,6 +42,7 @@
           <label for="" class="form-control-label"></label>
           <div class="col-sm">
             {% include '@PrestaShop/Admin/Sell/Catalog/Manufacturer/logo_image.html.twig' %}
+            {{ form_widget(manufacturerForm.logo) }}
           </div>
         </div>
       {% endif %}
