--- a/admin-dev/themes/new-theme/scss/theme.scss
+++ b/admin-dev/themes/new-theme/scss/theme.scss
@@ -6,7 +6,7 @@
 @import "~prestakit/scss/application";
 @import "~dropzone/dist/min/dropzone.min.css";
 @import "~magnific-popup/dist/magnific-popup.css";
-@import "~bourbon/app/assets/stylesheets/bourbon";
+@import "bourbon";
 @import "~perfect-scrollbar/css/perfect-scrollbar.css";
 @import "~eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min.css";
 @import "~bootstrap-colorpicker/dist/css/bootstrap-colorpicker.min.css";
