--- a/src/PrestaShopBundle/Resources/views/Admin/Sell/Order/Order/Blocks/View/history.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Sell/Order/Order/Blocks/View/history.html.twig
@@ -58,7 +58,7 @@
 </table>
 
 <div class="row">
-  <div class="col-sm-6 offset-sm-6">
+  <div class="col-sm-6 offset-xl-4 offset-xxl-6">
     {{ form_start(updateOrderStatusForm, {'action': path('admin_orders_update_status',  {'orderId': orderForViewing.id}), 'attr': {'class': 'card-details-form'}, }) }}
       <div class="form-group card-details-actions">
         {{ form_widget(updateOrderStatusForm.new_order_status_id) }}
