--- a/src/PrestaShopBundle/Resources/views/Admin/Configure/ShopParameters/CustomerSettings/Title/Blocks/form.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Configure/ShopParameters/CustomerSettings/Title/Blocks/form.html.twig
@@ -1,5 +1,4 @@
-<?php
-/**
+{#**
  * Copyright since 2007 PrestaShop SA and Contributors
  * PrestaShop is an International Registered Trademark & Property of PrestaShop SA
  *
@@ -22,31 +21,30 @@
  * @author    PrestaShop SA and Contributors <contact@prestashop.com>
  * @copyright Since 2007 PrestaShop SA and Contributors
  * @license   https://opensource.org/licenses/OSL-3.0 Open Software License (OSL 3.0)
- */
+ *#}
 
-declare(strict_types=1);
+{% form_theme titleForm '@PrestaShop/Admin/TwigTemplateForm/prestashop_ui_kit.html.twig' %}
 
-namespace PrestaShop\PrestaShop\Adapter\Title\CommandHandler;
-
-use PrestaShop\PrestaShop\Adapter\Title\AbstractTitleHandler;
-use PrestaShop\PrestaShop\Core\Domain\Title\Command\DeleteTitleCommand;
-use PrestaShop\PrestaShop\Core\Domain\Title\CommandHandler\DeleteTitleHandlerInterface;
-use PrestaShop\PrestaShop\Core\Domain\Title\Exception\DeleteTitleException;
-
-/**
- * Handles command that delete title
- */
-class DeleteTitleHandler extends AbstractTitleHandler implements DeleteTitleHandlerInterface
-{
-    /**
-     * {@inheritdoc}
-     */
-    public function handle(DeleteTitleCommand $command): void
-    {
-        $title = $this->titleRepository->get($command->getTitleId());
-
-        if (!$title->delete()) {
-            throw DeleteTitleException::createDeleteFailure($command->getTitleId());
-        }
-    }
-}
+{% block title_form %}
+  {{ form_start(titleForm) }}
+    <div class="card">
+      <h3 class="card-header">
+        <i class="material-icons">man</i>
+        {{ 'Social titles'|trans({}, 'Admin.Shopparameters.Feature') }}
+      </h3>
+      <div class="card-body">
+        <div class="form-wrapper">
+          {{ form_widget(titleForm) }}
+        </div>
+      </div>
+      <div class="card-footer">
+        <a href="{{ path('admin_contacts_index') }}" class="btn btn-outline-secondary">
+          {{ 'Cancel'|trans({}, 'Admin.Actions') }}
+        </a>
+        <button class="btn btn-primary float-right" id="save-button">
+          {{ 'Save'|trans({}, 'Admin.Actions') }}
+        </button>
+      </div>
+    </div>
+  {{ form_end(titleForm) }}
+{% endblock %}
