--- a/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Categories/Blocks/form.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Categories/Blocks/form.html.twig
@@ -40,6 +40,8 @@
         {{ form_row(categoryForm.id_parent) }}
       {% endif %}
       {{ form_row(categoryForm.description) }}
+      {{ form_row(categoryForm.additional_description) }}
+
       <div class="form-group row">
         <label class="form-control-label">
           {{ form_label(categoryForm.cover_image) }}
