--- a/admin-dev/themes/new-theme/scss/components/_modal.scss
+++ b/admin-dev/themes/new-theme/scss/components/_modal.scss
@@ -57,11 +57,13 @@ $component-name: modal;
 
   &-loader {
     position: fixed;
+    left: 0;
     z-index: 1;
     display: flex;
     align-items: center;
     justify-content: center;
     width: 100%;
+    height: 100%;
     min-height: 80px;
     margin: 0 auto;
     background: rgba(255, 255, 255, 1);
