--- a/admin-dev/themes/new-theme/scss/config/_settings.scss
+++ b/admin-dev/themes/new-theme/scss/config/_settings.scss
@@ -26,6 +26,7 @@ $multishop-header-default-color: #383c43;
 $multishop-header-default-background: #ebebeb;
 $multishop-header-allshop-color: $white;
 $multishop-header-allshop-background: #25b9d7;
+$multishop-selector-selected-background: #e2f5f9;
 
 // Sizes
 $size-navbar-width: 13.13rem;
