Fix dropdowns underflowing

--- a/admin-dev/themes/new-theme/scss/components/_form.scss
+++ b/admin-dev/themes/new-theme/scss/components/_form.scss
@@ -181,6 +181,7 @@
     margin-bottom: 0;
     border: none;
     box-shadow: none;
+    overflow: initial;
 
     .card-header {
       padding: 0;
