--- a/src/PrestaShopBundle/Resources/views/Admin/Common/Grid/Blocks/EmptyState/product.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Common/Grid/Blocks/EmptyState/product.html.twig
@@ -23,15 +23,18 @@
  * @license   https://opensource.org/licenses/OSL-3.0 Open Software License (OSL 3.0)
  *#}
 
-{% extends '@PrestaShop/Admin/Common/Grid/grid.html.twig' %}
+<div class="text-center showcase-list-card">
+  <img class="img-responsive mt-3 img-rtl" src="{{ asset('themes/new-theme/img/empty_state/catalog.png') }}">
 
-{% form_theme categoryFilterForm '@PrestaShop/Admin/Sell/Catalog/Product/FormTheme/categories.html.twig' %}
+  <p class="mt-4 showcase-list-card__header">{{ 'Manage your products'|trans({}, 'Admin.Catalog.Feature') }}</p>
 
-{% block grid_bulk_actions_block %}
-  {% if not grid.attributes.is_empty_state %}
-  {{ form_start(categoryFilterForm, {attr: {class: 'd-inline-block'}}) }}
-    {{ form_row(categoryFilterForm) }}
-  {{ form_end(categoryFilterForm) }}
-  {% endif %}
-  {{ parent() }}
-{% endblock %}
+  <div class="mt-4">
+    <a href="{{ path('admin_products_v2_create') }}" class="btn btn-primary ml-1 new-product-button">
+      {{ 'Create new product'|trans({}, 'Admin.Catalog.Feature') }}
+    </a>
+    {{ 'or'|trans({}, 'Admin.Global') }}
+    <a href="{{ path('admin_import') }}" target="_blank" class="btn btn-outline-secondary mr-1">
+      {{ 'Import a list of products.'|trans({}, 'Admin.Catalog.Feature') }}
+    </a>
+  </div>
+</div>
