--- a/src/PrestaShopBundle/Resources/views/Admin/Sell/CustomerService/CustomerThread/Block/contact_option.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Sell/CustomerService/CustomerThread/Block/contact_option.html.twig
@@ -1,4 +1,4 @@
-{#**
+{# **
  * Copyright since 2007 PrestaShop SA and Contributors
  * PrestaShop is an International Registered Trademark & Property of PrestaShop SA
  *
@@ -21,32 +21,27 @@
  * @author    PrestaShop SA and Contributors <contact@prestashop.com>
  * @copyright Since 2007 PrestaShop SA and Contributors
  * @license   https://opensource.org/licenses/OSL-3.0 Open Software License (OSL 3.0)
- *#}
-{% extends '@PrestaShop/Admin/layout.html.twig' %}
+ * #}
 
-{% block stylesheets %}
-  <link rel="stylesheet" href="{{ asset('themes/new-theme/public/customer_threads' ~ rtl_suffix ~ '.css') }}" type="text/css" media="all">
-{% endblock %}
+{{ form_start(contactOptionsForm, {
+  'action': path('admin_customer_threads_contact_options_update')
+}) }}
+<div class="card" data-role="employee-answer">
+  <h3 class="card-header">
+    <i class="material-icons">settings</i>
+    {{ 'Contact options'|trans({}, 'Admin.Catalog.Feature') }}
+  </h3>
 
-{% block content %}
-  {% block orders_kpi %}
-    {{ render(controller(
-      'PrestaShopBundle:Admin\\Common:renderKpiRow',
-      { 'kpiRow': customerThreadKpi }
-    )) }}
-  {% endblock %}
+  <div class="card-body">
+    {% block reply_to_customer_form_rest %}
+      {{ form_rest(contactOptionsForm) }}
+    {% endblock %}
+  </div>
 
-  {% include '@PrestaShop/Admin/Sell/CustomerService/CustomerThread/Block/list_header_html.twig' %}
-  {% include '@PrestaShop/Admin/Common/Grid/grid_panel.html.twig' with {'grid': customerThreadGrid} %}
-
-  {% include '@PrestaShop/Admin/Sell/CustomerService/CustomerThread/Block/contact_option.html.twig' %}
-
-{% endblock %}
-
-{% block javascripts %}
-  {{ parent() }}
-
-  <script src="{{ asset('themes/new-theme/public/customer_thread.bundle.js') }}"></script>
-  <script src="{{ asset('themes/default/js/bundle/pagination.js') }}"></script>
-{% endblock %}
-
+  <div class="card-footer">
+    <div class="d-flex justify-content-end">
+      <button class="btn btn-primary">{{ 'Send'|trans({}, 'Admin.Actions') }}</button>
+    </div>
+  </div>
+</div>
+{{ form_end(contactOptionsForm) }}
