--- a/src/PrestaShopBundle/Resources/views/Admin/Configure/AdvancedParameters/AuthorizationServer/index.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Configure/AdvancedParameters/AuthorizationServer/index.html.twig
@@ -1,5 +1,4 @@
-<?php
-/**
+{#**
  * Copyright since 2007 PrestaShop SA and Contributors
  * PrestaShop is an International Registered Trademark & Property of PrestaShop SA
  *
@@ -22,20 +21,5 @@
  * @author    PrestaShop SA and Contributors <contact@prestashop.com>
  * @copyright Since 2007 PrestaShop SA and Contributors
  * @license   https://opensource.org/licenses/OSL-3.0 Open Software License (OSL 3.0)
- */
-
-declare(strict_types=1);
-
-namespace PrestaShop\PrestaShop\Core\FeatureFlag;
-
-class FeatureFlagSettings
-{
-    public const STABILITY_STABLE = 'stable';
-    public const STABILITY_BETA = 'beta';
-
-    public const FEATURE_FLAG_PRODUCT_PAGE_V2 = 'product_page_v2';
-
-    public const FEATURE_FLAG_PRODUCT_PAGE_V2_MULTI_SHOP = 'product_page_v2_multi_shop';
-
-    public const FEATURE_FLAG_AUTHORIZATION_SERVER = 'authorization_server';
-}
+ *#}
+{% extends '@PrestaShop/Admin/layout.html.twig' %}
