--- a/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Product/FormTheme/catalog_price_rules.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Product/FormTheme/catalog_price_rules.html.twig
@@ -43,7 +43,7 @@
           <th>{{ 'Shop'|trans({}, 'Admin.Global') }}</th>
           <th>{{ 'Reduction'|trans({}, 'Admin.Catalog.Feature') }}</th>
           <th>{{ 'Reduction type'|trans({}, 'Admin.Catalog.Feature') }}</th>
-          <th>{{ ' ≥ Units'|trans({}, 'Admin.Global') }}</th>
+          <th>{{ 'Units'|trans({}, 'Admin.Global') }}</th>
           <th>{{ 'From'|trans({}, 'Admin.Global') }}</th>
           <th>{{ 'To'|trans({}, 'Admin.Global') }}</th>
           <th></th>
