Changed catalog price rule list to have discount instead of reduction type and valued

--- a/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Product/FormTheme/catalog_price_rules.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Product/FormTheme/catalog_price_rules.html.twig
@@ -41,8 +41,7 @@
           <th>{{ 'Country'|trans({}, 'Admin.Global') }}</th>
           <th>{{ 'Group'|trans({}, 'Admin.Global') }}</th>
           <th>{{ 'Shop'|trans({}, 'Admin.Global') }}</th>
-          <th>{{ 'Reduction'|trans({}, 'Admin.Catalog.Feature') }}</th>
-          <th>{{ 'Reduction type'|trans({}, 'Admin.Catalog.Feature') }}</th>
+          <th>{{ 'Discount (tax incl.)'|trans({}, 'Admin.Catalog.Feature') }}</th>
           <th>{{ 'Units'|trans({}, 'Admin.Global') }}</th>
           <th>{{ 'From'|trans({}, 'Admin.Global') }}</th>
           <th>{{ 'To'|trans({}, 'Admin.Global') }}</th>
@@ -67,8 +66,7 @@
           <td class="country"></td>
           <td class="group"></td>
           <td class="shop"></td>
-          <td class="reduction"></td>
-          <td class="reduction-type"></td>
+          <td class="impact"></td>
           <td class="from-qty"></td>
           <td class="from"></td>
           <td class="to"></td>
