Adding tax included information in list for catalog price rues

--- a/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Product/FormTheme/catalog_price_rules.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Product/FormTheme/catalog_price_rules.html.twig
@@ -41,7 +41,7 @@
           <th>{{ 'Country'|trans({}, 'Admin.Global') }}</th>
           <th>{{ 'Group'|trans({}, 'Admin.Global') }}</th>
           <th>{{ 'Shop'|trans({}, 'Admin.Global') }}</th>
-          <th>{{ 'Discount (tax incl.)'|trans({}, 'Admin.Catalog.Feature') }}</th>
+          <th>{{ 'Discount'|trans({}, 'Admin.Catalog.Feature') }}</th>
           <th>{{ 'Units'|trans({}, 'Admin.Global') }}</th>
           <th>{{ 'From'|trans({}, 'Admin.Global') }}</th>
           <th>{{ 'To'|trans({}, 'Admin.Global') }}</th>
