--- a/templates/bundles/PrestaShopBundle/Admin/Sell/CustomerService/OrderReturn/edit.html.twig
+++ b/templates/bundles/PrestaShopBundle/Admin/Sell/CustomerService/OrderReturn/edit.html.twig
@@ -23,7 +23,7 @@
  * International Registered Trademark & Property of PrestaShop SA
  *#}
 
-{% extends 'PrestaShopBundle:Admin:layout.html.twig' %}
+{% extends '@PrestaShop/Admin/layout.html.twig' %}
 
 {% block content %}
   <div class="row justify-content-center">
