Properly adding missing repositories and twig changes.
# Conflicts:
#	admin-dev/themes/new-theme/scss/components/_form.scss

--- a/admin-dev/themes/new-theme/scss/components/_form.scss
+++ b/admin-dev/themes/new-theme/scss/components/_form.scss
@@ -231,3 +231,9 @@
   gap: 10px;
   justify-content: space-between;
 }
+.text_preview-widget, .link_preview-widget {
+   .input-container{
+    padding-top: calc(0.375rem + 1px);
+  }
+}
+
