--- a/templates/bundles/PrestaShopBundle/Admin/Sell/CustomerService/OrderReturn/Blocks/form.html.twig
+++ b/templates/bundles/PrestaShopBundle/Admin/Sell/CustomerService/OrderReturn/Blocks/form.html.twig
@@ -32,11 +32,9 @@
     {{ 'Merchandise returns'|trans({}, 'Admin.Orderscustomers.Feature') }}
   </h3>
 
-  <div class="card-block row">
-    <div class="card-text">
-      {% block order_return_form_rest %}
-        {{ form_widget(orderReturnForm) }}
-      {% endblock %}
+  <div class="card-body">
+    <div class="form-wrapper">
+      {{ form_widget(orderReturnForm) }}
     </div>
   </div>
 
