--- a/admin-dev/themes/new-theme/scss/components/_form.scss
+++ b/admin-dev/themes/new-theme/scss/components/_form.scss
@@ -231,9 +231,10 @@
   gap: 10px;
   justify-content: space-between;
 }
-.text_preview-widget, .link_preview-widget {
-   .input-container{
+
+.text_preview-widget,
+.link_preview-widget {
+  .input-container{
     padding-top: calc(0.375rem + 1px);
   }
 }
-
