--- a/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Product/CatalogPriceRule/Blocks/list.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Product/CatalogPriceRule/Blocks/list.html.twig
@@ -23,7 +23,11 @@
  * @license   https://opensource.org/licenses/OSL-3.0 Open Software License (OSL 3.0)
  * #}
 <div id="catalog-price-rule-list-container" class="d-none">
-  <table class="table seo-table">
+  <div id="catalog-price-rules-loading">
+    <div class="loading-label">{{ 'Loading catalog price rules'|trans({}, 'Admin.Catalog.Feature') }}</div>
+    <div class="spinner spinner-primary"></div>
+  </div>
+  <table class="table" id="catalog-price-rules-list-table">
     <thead class="thead-default">
     <tr>
       <th>{{ 'ID'|trans({}, 'Admin.Global') }}</th>
@@ -44,6 +48,12 @@
     {# template rows dynamically generated using javascript #}
     </tbody>
   </table>
+  <div class="row justify-content-center" id="catalog-price-rules-pagination">
+    {{ include('@PrestaShop/Admin/Common/javascript_pagination.html.twig', {
+      'limit': 10,
+      'limitChoices': [10, 20, 50, 100],
+    }) }}
+  </div>
   <script type="text/html" id="catalog-price-rule-tr-template">
     <tr>
       <td class="catalog-price-rule-id"></td>
