--- a/src/PrestaShopBundle/Resources/views/Admin/Common/Grid/Columns/Content/data.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Common/Grid/Columns/Content/data.html.twig
@@ -25,13 +25,13 @@
 
 {% if column.options.max_displayed_characters > 0 and record[column.options.field]|length > column.options.max_displayed_characters %}
   {% if column.options.raw %}
-    {{ record[column.options.field]|slice(0, column.options.max_displayed_characters)|escape('html') }}&mldr;
+    {{ record[column.options.field]|slice(0, column.options.max_displayed_characters)|raw }}&mldr;
   {% else %}
     {{ record[column.options.field]|slice(0, column.options.max_displayed_characters) }}&mldr;
   {% endif %}
 {% else %}
   {% if column.options.raw %}
-    {{ record[column.options.field]|escape('html') }}
+    {{ record[column.options.field]|raw }}
   {% else %}
     {{ record[column.options.field] }}
   {% endif %}
